[package]
name = "minigrep-irshad"
version = "0.1.0"
edition = "2024"
description = "A minimal grep implementation"
license = "MIT"
repository = "https://github.com/irshadali5/minigrep"
readme = "README.md"
keywords = ["grep", "cli", "search"]
categories = ["command-line-utilities"]

[dependencies]
